--- a/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
@@ -19,10 +19,10 @@ El proceso para localizar una referencia no local es el siguiente:
 1. Encontrar la instancia del RA en la que fue alocada la variable.
 2. Utilizar el desplazamiento local (local_offset), para acceder a ella.
 
-A su vez, existen dos técnicas para localizar las entidades no locales al método invocado, esos son:
+A su vez, existen dos técnicas para localizar las entidades no locales al método invocado.
 
 >[!note] Conceptos Importantes
->Antes de entrar en detalle de como funciona cada método, es importante aclarar dos conceptos importantes para las reglas de alcance estáticas:
+>Antes de entrar en detalle de como funciona cada método, es importante aclarar un par de conceptos importantes para las reglas de alcance estáticas:
 >- **Profundidad Estática**: Es un número asociado con el enlace estático, su valor indica la profundidad en la que se encuentra un bloque o procedimiento de su antecesor más lejano.
 >
 ><span class="centerImg"> ![[LP-prof-est.png]] </span>
@@ -46,7 +46,7 @@ Es una cadena de enlaces estáticos que vincula instancias de registro de activa
 
 #### Display
 
-Consiste en colocar los enlaces estáticos en una pila, llamada display. Las entradas son punteros a las instancias de registro de activación que tienen las variables en el ambiente de referenciamiento. Una referencia a una entidad no local, puede ser representada por el siguiente par -> ***(Desplazamiento en el Display, Desplazamiento Local)***, en donde el Desplazamiento en el display = Desplazamiento de Cadena. Veremos vas de sus peculiaridades en el siguiente ejemplo.
+Consiste en colocar los enlaces estáticos en una pila, llamada display. Las entradas son punteros a las instancias de registro de activación que tienen las variables en el ambiente de referenciamiento. Una referencia a una entidad no local, puede ser representada por el siguiente par -> ***(Desplazamiento en el Display, Desplazamiento Local)***, en donde el Desplazamiento en el display = Profundidad estática. Veremos vas de sus peculiaridades en el siguiente ejemplo.
 
 <span class="centerImg">![[LP-display-ej1.png]]  </span>
 
@@ -54,7 +54,8 @@ Consiste en colocar los enlaces estáticos en una pila, llamada display. Las ent
 >Para encontrar la declaración de una variable no local:
 >1. Usa el desplazamiento en el display para obtener el puntero a la instancia de registro de activación que tiene la variable.
 >2. Usa el desplazamiento local para llegar a la variable dentro de la instancia de registro de activación.
->En el ejemplo vemos como se colocan los punteros a las respectivas instancias de registro de activación, de cada subprograma, de acuerdo al desplazamiento de cadena que posea cada bloque. Como se ven en el otro caso, si se apila en el CallStack un subprograma que posea un mismo desplazamiento de cadena que otro ya apilado, lo que sucederá es que se guardara el puntero del antiguo registro de activación y se pone el nuevo, luego cundo se termina la llamada a ese subprograma, se descarta ese puntero y se vuelve al antiguo.
+>
+>En el ejemplo vemos como se colocan los punteros a las respectivas instancias de registro de activación, de cada subprograma, de acuerdo a la profundidad estática que posea cada bloque. Como se ven en el otro caso, si se apila en el CallStack un subprograma que posea un mismo desplazamiento de cadena que otro ya apilado, lo que sucederá es que se guardara el puntero del antiguo registro de activación y se pone el nuevo, luego cundo se termina la llamada a ese subprograma, se descarta ese puntero y se vuelve al antiguo.
 
 # Reglas de Alcance Estático
 
