--- a/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
@@ -55,7 +55,7 @@ Consiste en colocar los enlaces estáticos en una pila, llamada display. Las ent
 >1. Usa el desplazamiento en el display para obtener el puntero a la instancia de registro de activación que tiene la variable.
 >2. Usa el desplazamiento local para llegar a la variable dentro de la instancia de registro de activación.
 >
->En el ejemplo vemos como se colocan los punteros a las respectivas instancias de registro de activación, de cada subprograma, de acuerdo a la profundidad estática que posea cada bloque. Como se ven en el otro caso, si se apila en el CallStack un subprograma que posea un mismo desplazamiento de cadena que otro ya apilado, lo que sucederá es que se guardara el puntero del antiguo registro de activación y se pone el nuevo, luego cundo se termina la llamada a ese subprograma, se descarta ese puntero y se vuelve al antiguo.
+>En el ejemplo vemos como se colocan los punteros a las respectivas instancias de registro de activación, de cada subprograma, de acuerdo a la profundidad estática que posea cada bloque. Como se ven en el otro caso, si se apila en el CallStack un subprograma que posea la misma profundidad que otro ya apilado, lo que sucederá es que se guardara el puntero del antiguo registro de activación y se reemplaza por el nuevo, luego cundo se termina la llamada a ese subprograma, se desapila su IRA del CallStack y se reestablece el puntero anterior en el display.
 
 # Reglas de Alcance Estático
 
