Se agrego la unidad 4 de Metodología y se corrigieron errores de otras materias

--- a/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
@@ -75,7 +75,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 4. **Palabras pregonadas:** Las palabras pregonadas son palabras opcionales que se insertan en los enunciados para mejorar la legibilidad. Ejemplo COBOL ofrece muchas opciones de este tipo, en el enunciado ***goto***, que se escribe GO TO, se requiere la palabra clave GO, pero TO es opcional; no transmite información y solo se usa para mejorar la legibilidad.
 5. **Comentarios:** La inclusión de comentarios en un programa es una parte importante de su documentación. Un lenguaje puede permitir comentarios de varias maneras:
 	1. Renglones de comentarios por separado en el programa, como FORTRAN.
-	2. Delimitados por marcadores especiales, los  / * y  * / de C sin que importen los límites de renglón.
+	2. Delimitados por marcadores especiales, los  {- y  -} de Haskell sin que importen los límites de renglón.
 	3. Comenzando en cualquier punto de un renglón pero ya concluidos al final del mismo, como el -- en Ada, // en C++.
 
 >[!info] Información Extra
