--- a/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -49,7 +49,7 @@ Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregad
 >Estos atributos se utilizan para representar información que es inherente a un símbolo no terminal, como el nombre de una variable en un programa o el valor de una constante en una expresión.
 
 >[!important] Uso de esta Gramática
->Las gramáticas de atributos se pueden usar para transmitir información semántica por todo el árbol sintáctico. Por ejemplo, las producciones de un lenguaje pueden recoger información de declaraciones y esa información de la tabla de símbolos se puede transmitir hacia abajo del árbol para usarse en la generación de código.
+>Las gramáticas de atributos se pueden usar para transmitir información semántica por todo el árbol sintáctico. Por ejemplo, las producciones de un lenguaje pueden recoger información de declaraciones y hacer uso de la información de la tabla de símbolos la cual puede transmitirse hacia abajo del árbol e usarse en la generación de código.
 
 - **Reglas Semánticas**: son un conjunto de funciones que sirve para definir y calcular los valores de los atributos definidos, y están asociados a las reglas de la gramática.
 - **Condiciones**: Son un conjunto de predicados que nos permiten verificar si el valor de los atributos van de acuerdo a las reglas de la gramática.
