Se recupero lo de SO y se hisieron otras cositas

--- a/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
@@ -25,14 +25,14 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 >[!important] Lenguajes de Programación y Legibilidad
 >La legibilidad se mejora a través de características de lenguaje tales como formatos naturales de enunciado, enunciados estructurados, uso abundante de palabras clave y palabras pregonadas, recursos para comentarios incrustados, identificadores de longitud sin restricción, símbolos mnemotécnicos de operadores, formatos de campo libre y declaraciones completas de datos.
 
-- **Facilidad de Escritura**: Utilización de estructuras concisas y regulares. Las características sintácticas que hace que un programa sea fácil de escribir suelen encontrarse en conflicto con las características que facilitan su lectura. El atributo de fácil escritura mejora a través del uso de estructuras sintácticas concisas y regulares, en tanto que para la legibilidad son de ayuda en diversas construcciones más elocuentes. Las convenciones sintácticas implícitas que permiten dejar sin especificar declaraciones y operaciones hacen a los programas más cortos y fáciles de escribir, pero dificultan su lectura.
+- **Facilidad de Escritura**: Utilización de estructuras concisas y regulares. Las características sintácticas que hace que un programa sea fácil de escribir suelen encontrarse en conflicto con las características que facilitan su lectura. Las convenciones sintácticas implícitas, por ejemplo, permiten dejar sin especificar declaraciones y operaciones, haciendo que los programas mas más cortos y fáciles de escribir, pero dificultan su lectura.
 
 >[!note] Nota
 >Una sintaxis es ***redundante*** si comunica el mismo elemento de información en más de una forma. Cierta redundancia es útil en la sintaxis de lenguajes de programación porque facilita la lectura del programa y también permite revisar en busca de errores durante la traducción. La desventaja es que la redundancia hace a los programas más elocuentes y, por tanto, dificulta su escritura.
 >Casi todas las reglas por omisión para el significado de construcciones de lenguaje buscan reducir la redundancia eliminando la expresión de significados que se pueden inferir del contexto. Por ejemplo, en vez de requerir la declaración explícita del tipo de cada variable simple, ***FORTRAN*** suministra una convención de nomenclatura que declara implícitamente que las variables cuyos nombres comienzan con una de las letras I-N son de tipo entero y todas las demás variables son de tipo real.
 
 >[!important] Características que Favorecen la Legibilidad y la Facilidad de Escritura
->El uso de enunciados estructurados, formatos simples de enunciados naturales, símbolos mnemotécnicos de operaciones e identificadores no restringidos facilita por lo común la escritura de programas al permitir una estructura más natural para los algoritmos y datos del problema se represente directamente en el programa. 
+>El uso de enunciados estructurados, formatos simples de enunciados naturales, símbolos mnemotécnicos de operaciones e identificadores no restringidos facilita por lo común la escritura de programas al permitir una estructura más natural para los algoritmos y los datos del problema se represente directamente en el programa. 
 
 - **Facilidad de Verificación**: Entender un enunciado es fácil, crear programas correctos es difícil. Si bien entender cada enunciado de lenguaje de programación es relativamente fácil, el proceso global de crear programas correctos es un extremo difícil. Por consiguiente, se necesitan técnicas que permitan probar que el programa es matemáticamente correcto.
 - **Facilidad de Traducción**: Legibilidad y facilidad de escritura son criterios dirigidos a las necesidades del programador humano. La facilidad de traducción se relaciona con las necesidades del traductor que procesa el programa escrito. La clave para una traducción fácil es la regularidad de la estructura.  Por ejemplo, la sintaxis de LISP proporciona un ejemplo de una estructura de programa que no es particularmente legible ni especialmente fácil de escribir, pero que resulta en extremo fácil de traducir. La estructura sintáctica completa de cualquier programa en LISP se puede describir en unas cuantas reglas sencillas a causa de la regularidad de la sintaxis.
@@ -40,7 +40,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 >[!important] Regularidad vs Legibilidad
 >La traducción de los programas se dificulta conforme aumenta el número de construcciones sintácticas especiales. Por ejemplo, la traducción de COBOL se hace muy difícil a causa del gran número de formas de enunciados y declaraciones que se permiten, no obstante que la semántica del lenguaje no es complicada de manera expresa.
 
-- **Carencia de Ambigüedad**: Idealmente, un solo significado para cada construcción sintáctica que se puede escribir. Una construcción ambigua permite dos o más interpretaciones distintas. La ambigüedad es un problema medular en todo diseño de lenguaje. El problema de ambigüedad surge por lo común no en la estructura de elementos individuales de programa, sino en la interacción entre diferentes estructuras.
+- **Carencia de Ambigüedad**: Idealmente, un solo significado para cada construcción sintáctica que se puede escribir, una construcción se dice que es ambigua si permite dos o más interpretaciones distintas. La ambigüedad es un problema medular en todo diseño de lenguaje. El problema de ambigüedad surge por lo común no en la estructura de elementos individuales de programa, sino en la interacción entre diferentes estructuras.
 
 >[!example] Ejemplo de Ambigüedad
 >Tanto PASCAL como ALGOL permiten dos formas distintas de enunciado condicional:
