--- a/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -30,31 +30,17 @@ Al contrario que las normas sintácticas que se pueden describir a través de la
 Uno de los primeros intentos para desarrollar un modelo semántico de un lenguaje de programación fue en concepto de gramáticas de atributos, desarrollado por Donald Knuth. La idea era asociar una función con cada nodo del árbol de análisis sintáctico de un programa, dando el contenido semántico de ese nodo. Las gramáticas de atributos se crearon agregando funciones (atributos) a cada regla de una gramática.
 Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregado una serie de nuevos elementos que van a aportar más información al árbol sintáctico y nos será de utilidad a la hora de la implementación de un analizador semántico. Entre esos elementos se encuentran:
 
-- **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria. Estos atributos pueden ser: sintetizados, heredados o intrínsecos.
-
-- **Atributos Sintetizados S(x)**: Cuando la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico.
-
->[!info] Cálculo de los Atributos Sintetizados
->Estos atributos se calculan en los símbolos no terminal a partir de los atributos de sus símbolos hijos. Estos atributos se utilizan para representar información que se "sintetiza" a medida que se construye la cadena del lenguaje (árbol de análisis sintáctico). Un ejemplo de un atributo sintetizado podría ser el número de elementos en una lista, que se calcula a partir de los elementos individuales de la lista.
-
-- **Atributos Heredados I(x)**: Cuando la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico.
-
->[!info] Creación de los Atributos Heredados
->Son atributos que se transfieren desde un símbolo no terminal a uno o más de sus símbolos hijos. Estos atributos se utilizan para representar información que se "hereda" de un nivel de la gramática a otro. Un ejemplo de un atributo heredado podría ser el tipo de dato de una variable en un programa, que se hereda desde la declaración de la variable a su uso posterior en el código.
-
-- **Atributos Intrínsecos**: Son un caso particular de valor sintetizado, el cual solo es asignado a las hojas del árbol y que son calculados por fuera del árbol sintáctico, y guardados en la tabla de símbolos.
-
->[!info] Atributos Intrínsecos, Uso y Particularidad
->Son aquellos atributos que están asociados a un símbolo no terminal, estos atributos son calculados por el analizador léxico y guardado en la ***tabla de símbolos*** para su posterior uso.
->Estos atributos se utilizan para representar información que es inherente a un símbolo no terminal, como el nombre de una variable en un programa o el valor de una constante en una expresión.
+- **Reglas Semánticas**: son un conjunto de funciones que sirve para definir y calcular los valores de los atributos definidos, y están asociados a las reglas de la gramática.
+- **Condiciones**: Son un conjunto de predicados que nos permiten verificar si el valor de los atributos van de acuerdo a las reglas de la gramática.
+- **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria. Estos atributos pueden ser:
+	- **Atributos Sintetizados S(x)**: Cuando la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico. Estos atributos se calculan en los símbolos no terminal a partir de los atributos de sus símbolos hijos. Estos atributos se utilizan para representar información que se "sintetiza" a medida que se construye la cadena del lenguaje (árbol de análisis sintáctico). Un ejemplo de un atributo sintetizado podría ser el número de elementos en una lista, que se calcula a partir de los elementos individuales de la lista.
+	- **Atributos Heredados I(x)**: Cuando la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico. Son atributos que se transfieren desde un símbolo no terminal a uno o más de sus símbolos hijos. Estos atributos se utilizan para representar información que se "hereda" de un nivel de la gramática a otro. Un ejemplo de un atributo heredado podría ser el tipo de dato de una variable en un programa, que se hereda desde la declaración de la variable a su uso posterior en el código.
+	- **Atributos Intrínsecos**: Son un caso particular de valor sintetizado, el cual solo es asignado a las hojas del árbol y que son calculados por fuera del árbol sintáctico, y guardados en la tabla de símbolos. Son aquellos atributos que están asociados a un símbolo no terminal, estos atributos son calculados por el analizador léxico y guardado en la ***tabla de símbolos*** para su posterior uso. Estos atributos se utilizan para representar información que es inherente a un símbolo no terminal, como el nombre de una variable en un programa o el valor de una constante en una expresión.
 
 >[!important] Uso de esta Gramática
 >Las gramáticas de atributos se pueden usar para transmitir información semántica por todo el árbol sintáctico. Por ejemplo, las producciones de un lenguaje pueden recoger información de declaraciones y hacer uso de la información de la tabla de símbolos la cual puede transmitirse hacia abajo del árbol e usarse en la generación de código.
 
-- **Reglas Semánticas**: son un conjunto de funciones que sirve para definir y calcular los valores de los atributos definidos, y están asociados a las reglas de la gramática.
-- **Condiciones**: Son un conjunto de predicados que nos permiten verificar si el valor de los atributos van de acuerdo a las reglas de la gramática.
-
->[!note] Nota
+>[!note] Nota de Clases
 >- Cada elemento no terminal, puede tener un valor finito de elementos asociados.
 >- La aparición de algunos atributos pueden estar ligadas a expresiones lógicas.
 >- Los valores de los atributos serán calculadas a través de las reglas de evaluación asociadas a las reglas de producción.
@@ -65,23 +51,22 @@ Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregad
 
 Describe el **significado** del lenguaje **especificando como se ejecuta un programa en una máquina abstracta**, básicamente esta semántica se centra en **conocer el resultado** que genera el programa y **el modo en que este resultado es obtenido**. Puede estar basado en una máquina abstracta concreta (que existe) o en una genérica (que no existe físicamente, pero se especifica). Son **útiles, sobre todo, en la implementación de los lenguajes.** Porque dice como debe ejecutarse el programa en tiempo de ejecución.
 
->[!info] Información Extra
->Por lo general en este tipo de semántica el programa se especifica utilizando otro lenguaje de más bajo nivel y luego ejecutando sus sentencias en una máquina abstracta o también puede ser expresado mediante una notación formal.
+>[!info] Especificación de la Semántica Operacional
+>Por lo general en este tipo de semántica el programa se especifica utilizando otro lenguaje de más bajo nivel y luego ejecutando sus sentencias en una máquina abstracta. También puede ser expresado mediante una notación formal.
 >Es frecuentemente usada en textos de programación y manuales de referencia del lenguaje, dado que está más cercana a la implementación y pueden ser útiles a la hora de construir prototipos de procesadores de lenguajes de programación.
 
 #### Semántica Axiomática
 
-Este método amplía el cálculo de predicados para incluir programas. Se puede definir la semántica de cada construcción sintáctica en el lenguaje como axiomas o reglas de inferencia (Aserciones) que se pueden usar para deducir el efecto de la ejecución de esa construcción. Para entender el significado del programa completo, se usan los axiomas y reglas de inferencia.
+Este método amplía el cálculo de predicados para incluir programas. Se puede definir la semántica de cada construcción sintáctica en el lenguaje como axiomas o reglas de inferencia que se pueden usar para deducir el efecto de la ejecución de esa construcción. Para entender el significado del programa completo, se usan los axiomas y reglas de inferencia.
 A partir del supuesto inicial de que los valores de las variables de entrada satisfacen ciertas restricciones, los axiomas y reglas de inferencia se pueden usar para deducir las restricciones que satisfacen los valores de otras variables después de la ejecución de cada enunciado del programa. En último término, se prueba que los resultados del programa satisfacen las restricciones deseadas de sus valores en relación con los valores de entrada. Es decir, se prueba que los valores de salida representan la función correcta computada a partir de los valores.
-
-- **Aserciones**: Si se realiza antes de una sentencia sería una ***Precondición*** y si se realiza después de una sentencia es una ***Precondición***, ambos son expresados de la siguiente manera ***{P} S {Q}***.
-
->[!note] Nota
->Se le asigna una expreción logica o predicado (aserciones) a cada una de las sentencias escritas, de manera que cada sentecnia puede derivar en verdadero o falso o en otra expreción lógica. Cada una de estas expreciones afirman las relaciones entre las variables y las restricciones que se cumplen en ese momento en la ejecución.
 
 - **Precondiciones menos restrictivas**: Nos ayudarán a que se cumplan las precondiciones más restrictivas asociadas a estas.
 - **Regla de inferencia:** Es un método que nos permite concluir la veracidad de las afirmaciones basándose en anteriores afirmaciones. Son las que van a plantear las post y precondiciones.
 - **Axiomas**: Es una afirmación que es verdadera siempre.
+- **Aserciones**: Si se realiza antes de una sentencia sería una ***Precondición*** y si se realiza después de una sentencia es una ***Precondición***, ambos son expresados de la siguiente manera ***{P} S {Q}***.
+
+>[!note] Uso de las Aserciones
+>Se le asigna una expreción logica o predicado (aserciones) a cada una de las sentencias escritas, de manera que cada sentecnia puede derivar en verdadero o falso o en otra expreción lógica. Cada una de estas expreciones afirman las relaciones entre las variables y las restricciones que se cumplen en ese momento en la ejecución.
 
 #### Semántica Denotacional
 
@@ -89,10 +74,10 @@ Brinda una definición del comportamiento de las estructuras o componentes del l
 Define el comportamiento de un lenguaje de programación aplicando funciones matemáticas a programas o a construcciones del lenguaje, para representar su significado, este es el método más riguroso para describir el significado de los programas o construcciones, ya que incluso se puede predecir el comportamiento de un programa sin necesidad de ejecutarlo en una computadora.
 
 >[!important] Funcionalidad y Ventajas
->Define una función que computa el programa (al programa se lo ve como una función, entrada, proceso, salida), pero sin ocuparse de la forma en que lo hace, brindando un nivel de abstracción mayor que el de la semántica operacional y esto permite estudiar propiedades formales de los programas, como, por ejemplo, las equivalencias que pueda haber entre dos programas, desde el punto de vista del resultado que dan (sin importar la entrada, proceso). 
+>Se define una función que computa el programa (al programa se lo ve como una función, entrada, proceso, salida), pero sin ocuparse de la forma en que lo hace, brindando un nivel de abstracción mayor que el de la semántica operacional y esto permite estudiar propiedades formales de los programas, como, por ejemplo, las equivalencias que pueda haber entre dos programas, desde el punto de vista del resultado que dan (sin importar la entrada, proceso). 
 
->[!note] Nota
->Para lograr describir la semántica con esta notación se le debe asignar a cada construcción del lenguaje un objeto matemático y una funcion que va a mapear instancias de esas construcciones en instancias de ese objeto matemático.
->Se basa en la recursividad de las funciones, las cuales tienen un dominio y una rango.
+>[!note] Aplicación de la Semántica Denotacional
+>Para lograr describir la semántica con esta notación se le debe asignar a cada construcción del lenguaje un objeto matemático y una función que va a mapear instancias de esas construcciones en instancias de ese objeto matemático.
+>Se basa en la recursividad de las funciones, las cuales tienen un dominio y un rango.
 >- **Dominio sintáctico**: estructuras sintácticas que se mapean.
->- **Dominio semántico**: es la colección de objetos con los que se mapean los parámetros. es decir el rango de la función.
+>- **Dominio semántico**: es la colección de objetos con los que se mapean los parámetros. Es decir, el rango de la función.
