--- a/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
@@ -54,7 +54,7 @@ Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***
 	- **Lenguajes con alcance dinámico**: El ambiente de referencia está conformado por todas las entidades locales al bloque, más todas las demás visibles desde el resto de subprogramas activos.
 
 >[!important] Solapamiento de Entidades
->Tomando el ejemplo anterior, con la diferencia de que los códigos de dichos programas están encadenados, supongamos que se debe realizar una operación en C con una variable de nombre ***x*** local, y una variable ***z*** que están declaradas tanto en *A* y en *B*, lo que pasara en ese caso es que para resolver la operación se va a quedar con la y definida en B. Esto en el caso de los lenguajes de alcance estático, ya que en los lenguajes de alcance dinámico esto va a estar dado por el flujo del programa.
+>Tomando el ejemplo anterior, con la diferencia de que los códigos de dichos programas están encadenados, supongamos que se debe realizar una operación en C con una variable de nombre ***x*** local, y una variable ***z*** que están declaradas tanto en *A* y en *B*, lo que pasara en ese caso es que para resolver la operación se va a quedar con la ***z*** definida en B. Esto en el caso de los lenguajes de alcance estático, ya que en los lenguajes de alcance dinámico esto va a estar dado por el flujo del programa.
 
 
 Para entender mucho mejor este concepto veamos el siguiente ejemplo:
