--- a/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y constantes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y constantes.md
@@ -32,7 +32,7 @@ Existen dos tipos de constantes:
 		- Ofrece una gestión de almacenamiento dinámico, pero son muy Ineficiente.
 	- ***Dinámicas en heap implícitas***: Se vincula y desvincula memoria a través de sentencias de asignación.
 		- Poseen mayor flexibilidad, pero son ineficiente, ya que todos los atributos son dinámicos y es más difícil la detección de errores.
-- **Valor**: La ligadura de los valores de constantes nominadas puede ser estáticas, como en el caso de FORTRAN con la asignación de valores literales. O dinámicas, en el cual se pueden realizar asignaciones a las constantes mediante el uso de operadores y referencias a otras entidades, por ejemplo la siguiente sentencia en C++ -> ***const int result = 2 * width + 1;***
+- **Valor**: La ligadura de los valores de constantes nominadas puede ser estáticas, como en el caso de FORTRAN con la asignación de valores literales. O dinámicas, en el cual se pueden realizar asignaciones a las constantes mediante el uso de operadores y referencias a otras entidades, por ejemplo la siguiente sentencia en C++ -> ***const int result = 2 + width + 1;***
 - **Locación**: Dirección o área de memoria a la que está asociada la variable. También denominada *L-value*.
 - **Alias**: Cuando dos nombres diferentes de variables están asociados a la misma dirección de memoria en el mismo momento. Los alias son creados a través de punteros, o por variables de referencia, o por uniones en C y C++.
 
