--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -12,7 +12,7 @@ De esta forma, un proceso (suspendido) consiste en su espacio de direcciones, qu
 En este modelo, todo el software ejecutable en la computadora, que algunas veces incluye al sistema operativo, se organiza en varios ***procesos secuenciales***. Un proceso no es más que una instancia de un programa en ejecución, incluyendo los valores actuales del contador de programa, los registros y las variables. Conceptualmente, cada proceso tiene su propia CPU virtual; pero en la realidad, la CPU real conmuta de un proceso a otro.
 Cada proceso cuenta con su propio flujo de control (es decir, su propio contador de programa lógico) y se ejecutan de forma independiente. Desde luego que sólo hay un contador de programa físico, por lo que cuando se ejecuta cada proceso, se carga su contador de programa lógico en el contador de programa real. Cuando termina (por el tiempo que tenga asignado o por una interrupción), el contador de programa físico se guarda en el contador de programa lógico almacenado, del proceso en memoria.
 
->[!important] El Proceso es más que un Programa en Ejecución
+>[!tldr] El Proceso es más que un Programa en Ejecución
 >Hay que resaltar que un proceso es algo más que el código de un programa (al que en ocasiones se denomina **sección de texto**) Además del código, un proceso incluye también la actividad actual, que queda representada por el valor del **contador de programa** y por los contenidos de los registros del procesador. Generalmente, un proceso incluye también la **pila** del proceso, que contiene datos temporales (parámetros de las funciones, las direcciones de retorno y las variables locales), y una **sección de datos**, que contiene las variables globales. El proceso puede incluir, asimismo, un **cúmulo de memoria,** que es la memoria que se asigna dinámicamente al proceso en tiempo de ejecución.
 
 <span class="centerImg"> ![[SO-procesos.png]] </span>
@@ -23,7 +23,7 @@ Cada proceso cuenta con su propio flujo de control (es decir, su propio contador
 > 
 > - Vale la pena recalcar que si un programa se está ejecutando por duplicado cuenta como dos procesos. El hecho de que dos procesos en ejecución tengan el mismo programa no importa; son procesos distintos. El sistema operativo es capaz de compartir el código entre ellos de manera que solo haya una copia en la memoria.
 >
-> Para que una unidad pasiva se convierta en una unidad activa, se le tiene que agregar información adicional, como por ejemplo, el PC (program counter), la orientación, su prioridad, entre otras cosas, y una vez que este se carga en memoria podemos decir que paso a ser una unidad activa.
+> Para que una unidad pasiva se convierta en una unidad activa, se le tiene que agregar información adicional, como por ejemplo, el PC (program counter), la orientación, su prioridad, entre otras cosas, y una vez que este se carga en memoria podemos decir que paso a ser una unidad activa. Toda esta información es almacenada en el ***bloque de control de procesos*** (PCB).
 > Pero el SO para hacer todo eso primero debe fijarse como gestiona la memoria, si es mediante ***paginación*** o por ***segmentación***, si el SO funciona mediante paginación se va a trozar el programa en *N* páginas del mismo tamaño. Por otro lado, sí funciona mediante segmentación, se va a dividir el programa en rutinas, las cuales pueden variar su tamaño de una a otras.
 > Esto es importante saberlo, ya que dependiendo de cuál de los dos modelos tome, el procesador va a cargar diferentes páginas o segmentos cuando se realice la ejecución de las instrucciones.
 
@@ -42,11 +42,20 @@ Es importante darse cuenta de que solo puede haber un proceso *ejecutándose* en
 ## Bloque de control de proceso
 
 Cada proceso se representa en el SO mediante un **bloque de control de proceso** (PCB, process control block), también denominado *bloque de control de tarea*. Un bloque de control de proceso contiene muchos elementos de información asociados con un proceso específico, entre los que se incluyen:
-- **Estado del proceso.**
-- **Contador de programa.**
-- **Registros de la CPU.**
-- **Información de planificación de la CPU**
-- **Información de gestión de memoria**
-- **Información contable.**
-- **Información del estado de E/S.**
+- **Estado del proceso:** Uno de los cuantos mencionados anteriormente
+- **Contador de programa:** El contador va a indicar la dirección de la siguiente instrucción que se debe ejecutar el proceso.
+- **Registros de la CPU:** Los registros varían en cuanto a número y tipo, dependiendo de la arquitectura de la computadora. La información de los estados de estos registros debe guardarse junto con el PC cuando se produce una interrupción, para que luego el proceso pueda continuar ejecutándose correctamente.
+- **Información de planificación de la CPU:** Esta información incluye la prioridad del proceso, los punteros a la cola de planificación y cualquier otro parámetro de planificación que se requiera.
+- **Información de gestión de memoria:** Incluye la información acerca del valor de los registros base y límite, la tabla de páginas o segmentos (dependiendo de como maneje la memoria el sistema operativo).
+- **Información contable:** Esta información incluye la cantidad de CPU y de tiempo real empleado, los límites de tiempo asignados, los números de cuenta, número de trabajo o proceso.
+- **Información del estado de E/S:** Esta información incluye la lista de dispositivos de E/S asignados al proceso, una lista de archivos abiertos, etc.
 
+A su vez, el PCB maneja 3 tablas: un puntero a la ***tabla de páginas*** muestra ka cantidad de páginas en la que está partido el programa e indica cuáles de esas páginas está en memoria principal y cuáles no. Un puntero a la ***tabla de recursos*** que contiene los dispositivos que va a solicitar el proceso. Y una ***tabla de archivos abiertos*** donde estan todos los archivos que utiliza el proceso en su ejecución.
+
+>[!important] Gestión de PCB
+>Cuando se inicia la computadora, se crean todos los PCB que van a estar disponibles, esto significa que hay un número limitado. Cuando se crea un proceso, el Sistema Operativo le asigna a cada proceso nuevo un PCB, es el mismo Sistema Operativo el que una vez finalizado o muerto el proceso recuperar ese PCB y dejarlo disponible para que otro proceso pueda utilizarlo.
+
+En resumen, el PCB sirve simplemente como repositorio para la información variable con las que cuenta un proceso. Esto es así, ya que el programa cuando es convertido en un proceso y cargado en memoria principal, lo hace en modo solo lectura, esto con el fin de facilitarle las cosas al Sistema Operativo y que no tenga que preocuparse por posibles errores en la escritura de información.
+
+>[!note] Anotación de Clase
+>En los sistemas operativos más modernos, el PCB también almacena quien es el propietario del proceso, es decir, el usuario al que pertenece ese proceso o que solicito que se cree dicho proceso. 
