Se agrego la ultima parte de la unidad 2 de Autómatas y se agregaron algunas cosas al canva de Probabilidad

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -10,14 +10,16 @@ En los modelos de sistemas discretos, los estados y las transiciones deben estar
 >[!note] Nota
 >Para este tipo de autómatas los estados son excluyentes, lo que significa que solo se puede tener un estado u otro, no ambos al mismo tiempo.
 
-## Autómatas Finitos Deterministas
+---
 
-Características
+# Autómatas Finitos Deterministas
+
 
 >[!important] El determinismo en los Autómatas Finitos
 >Un autómata finito puede ser determinista si, para cada estado y cada símbolo de entrada, existe una transición única a otro estado. Es decir, dado un estado y un símbolo de entrada, el autómata determinista siempre sabe exactamente a qué estado debe moverse a continuación, sin necesidad de tomar decisiones o elegir entre varias opciones.
 >Esta característica de un ***autómata finito determinista*** lo hace más fácil de implementar y analizar, ya que su comportamiento está completamente determinado por su estructura y función de transición.
 
+Características:
 - Solo se puede estar en un único estado luego de leer una entrada.
 - Para cada entrada solo existe uno y solo un estado al que el autómata puede hacer la transición a partir del estado actual (determinismo).
 - Presentan estados “saturados”, que sea saturado, significa que para cada estado, debe existir una transición para cada símbolo del alfabeto que procesa.
