Se agrego la parte de sistema de tipos de LP y se margeo el contenido de las horas de créditos de investigación, mas otras correcciones varias

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -52,7 +52,7 @@ A la hora de diseñar un AFD que sirva para la aceptación de un lenguaje, se pr
 1. **Solución Incorrecta** -> Que sobren palabras en las sentencias
 2. **Solución Incompleta** -> Que falten palabras en las sentencias
 
-Por eso, para diseñar uno de la manera más correcta se debe deben crear estados intermedios que "recuerden" condiciones importantes en el problema que se busca solucionar. A su vez, proponer transiciones que permitan pasar de un estado a otro.
+Por eso, para diseñar uno de la manera más correcta se deben crear estados intermedios que "recuerden" condiciones importantes en el problema que se busca solucionar. A su vez, proponer transiciones que permitan pasar de un estado a otro.
 Para facilitar esta parte existen dos métodos de diseño
 
 1. **Por Conjuntos de Estados** -> En este método asociamos condiciones a grupos de estados, con lo que logramos aumentar el grado de abstracción. Por Ej.:
@@ -144,7 +144,7 @@ Se los define como una quíntupla ***A = (Q, Σ, δ, q0 , F)***, en donde:
 Al igual que los autómatas finitos deterministas, los no deterministas se pueden representar a través de grafos o de tablas de estados. A diferencias de los deterministas, los automatas finitos no deterministas poseen una particularidad que es la ***relación lambda***.
 
 >[!important] Relación Lambda
->Dado dos estados *p* y *q* de un AFN, están relacionados mediante una relación lambda si la transición a otro estado no consume ningún carácter de entrada, es decir, hace una transición a otro estado sin la necesidad de recibir una entrada.
+>Dado dos estados *p* y *q* de un AFN, están relacionados mediante una relación lambda si en la transición a otro estado no se consume ningún carácter de entrada, es decir, hace una transición a otro estado sin la necesidad de recibir una entrada.
 >- **Clausura transitiva de la relación lambda**: dado un conjunto de estados { *p, q, r* } si ***(p, q)*** poseen una relación lambda, y además ***(q, r)*** a su vez poseen una relación lambda, entonces ***(q, r)*** también poseen una relación lambda.
 >- **Clausura transitiva y reflexiva de la relación**: Posee todos los elementos de la clausura transitiva de la relación, agregando al grupo las transiciones lambda que posee cada estado consigo mismo, es decir, (p y p) o (q y q).
 
@@ -167,7 +167,7 @@ Al igual que los autómatas finitos deterministas, los no deterministas se puede
 >
 ><span class="centerImg"> ![[ALF-union-lenguajes.png]] </span>
 >
->- **AFN para la concatenación de Lenguajes**: Dado dos lenguajes L1 y L2, para lograr una concatenación de lenguajes lo que se debe hacer es de los estado finales de un autómata, se crean transiciones vacías (relación lambda) entre los estados finales del primer autómata hacia el estado inicial del segundo autómata. Convirtiendose cada uno de los estado finales del primer autómata en estados no fonales.
+>- **AFN para la concatenación de Lenguajes**: Dado dos lenguajes L1 y L2, para lograr una concatenación de lenguajes lo que se debe hacer es de los estado finales de un autómata, se crean transiciones vacías (relación lambda) entre los estados finales del primer autómata hacia el estado inicial del segundo autómata. Convirtiendose cada uno de los estado finales del primer autómata en estados no finales.
 >
 ><span class="centerImg"> ![[ALF-concatenacion-lenguajes.png]] </span>
 
@@ -175,7 +175,7 @@ Al igual que los autómatas finitos deterministas, los no deterministas se puede
 
 Informalmente, un AFN es una extensión de un AFD que permiten ciertas transiciones prohibidas para éstos:
 - A partir de un estado concreto, no es preciso que el autómata tenga prevista alguna transición a otro estado (o al mismo) en respuesta a todos los símbolos de entrada posibles.
-- A partir de un estado concreto, y ante un símbolo de entrada, se permite que autómata transite a más de un estado distinto.
+- A partir de un estado concreto, y ante un símbolo de entrada, se permite que el autómata transite a más de un estado distinto.
 - No es obligatorio consumir un símbolo de entrada para que el autómata cambie estado.
 
 Para todo AFN N, existe un AFD D tal que L(N) = L(D).
