--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expreciones Regulares.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expreciones Regulares.md
@@ -85,5 +85,4 @@ Si $L$ es un lenguaje regular (infinito). Entonces existe una constante $n$ (que
 
 1. $y \neq \varepsilon$
 2. $|xy| \leq n$
-3. $\forall k \geq 0, la cadena xy^k z ϵ L$
-
+3. $\forall k \geq 0$, la cadena $xy^k z$ ϵ $L$
