--- a/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
+++ b/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
@@ -85,7 +85,7 @@ De acuerdo al polimorfismo, los lenguajes se pueden clasificar en dos:
 >[!tldr] Tipos de Polimorfismos
 >- **Polimorfismo Universal**: Permite que una única función opere uniformemente sobre un conjunto de tipos que comparten la misma estructura. Estas se pueden separar en dos:
 >	- ***Polimorfismo paramétrico*** -> cuando la uniformidad está dada a través de parámetros. Es decir, una función puede mediante el mismo nombre operar sobre diferentes tipos de datos.
->	- ***Polimorfismo por inclusión*** -> cuando se alcanza uniformidad modelando subtipos y herencia. El ejemplo más sencillo es cuando por se sobreescribe un método de una clase padre.
+>	- ***Polimorfismo por inclusión*** -> cuando se alcanza uniformidad modelando subtipos y herencia. El ejemplo más sencillo es cuando se sobreescribe un método de una clase padre.
 >- **Polimorfismo Ad-Hoc**: Permite que una función pueda aplicarse a tipos diferentes y el comportamiento puede diferir sustancialmente de un tipo a otro.
 >	- ***Coerción***.
 >	- ***Sobrecarga***.
